ignore多過ぎ問題

--- a/.gitignore
+++ b/.gitignore
@@ -56,7 +56,7 @@ dkms.conf
 *.userprefs
 packages/
 xamarin-base/xamarin-base.Shared/bin
-xamarin-base/xamarin-base.Shared/onj
+xamarin-base/xamarin-base.Shared/obj
 xamarin-base/xamarin-base.iOS/bin
 xamarin-base/xamarin-base.iOS/obj
 xamarin-base/xamarin-base.Droid/bin
